--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
   <section class="principal">
     <div class="download">
       <div class="section-text">
-        <h1>A history of everything you copy</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur</p>
+
+        <div class="img-profile">
+          <img src="abbas.jpg" alt="">
+        </div>
+        <h1>Abbas Atwi</h1>
+        <p>Software Engenner</p>
 
         <div class="btns">
           <a href="">Download for IOS</a>
@@ -25,8 +29,11 @@
 
     <div class="sub-principal">
       <div class="section-text flex-2">
-        <h1>A history of everything you copy</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur</p>
+        <h1>Sobre mim</h1>
+        <ul>
+          <li>Graduação - Eng. Software</li>
+          <li></li>
+        </ul>
       </div>
 
       <div class="sub-principal-content">
