--- a/index.html
+++ b/index.html
@@ -21,36 +21,35 @@
         <p>Software Engenner</p>
 
         <div class="btns">
-          <a href="">Download for IOS</a>
-          <a href="">Downlaod For Mac</a>
+          <a href="">Contato</a>
+          <a href="">Projetos</a </div>
         </div>
       </div>
-    </div>
 
-    <div class="sub-principal">
-      <div class="section-text flex-2">
-        <h1>Sobre mim</h1>
-        <ul>
-          <li>Graduação - Eng. Software</li>
-          <li></li>
-        </ul>
-      </div>
+      <div class="sub-principal">
+        <div class="section-text flex-2">
+          <h1>Sobre mim</h1>
 
-      <div class="sub-principal-content">
-        <div class="sub-principal-img">
-          <img src="mac.png" alt="">
         </div>
 
-        <div class="sub-principal-desc">
-          <h1>Quick Search</h1>
-          <p>oi oi oi oi</p>
-          <h1>Quick Search</h1>
-          <p>oi oi oi oi</p>
-          <h1>Quick Search</h1>
-          <p>oi oi oi oi</p>
+        <div class="sub-principal-content">
+          <div class="sub-principal-img">
+            <img src="mac.png" alt="">
+          </div>
+
+          <div class="sub-principal-desc">
+            <h1>Soft Skills</h1>
+            <ul>
+              <li>Graduação - Eng. Software</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JAVASCRIPT</li>
+              <li>REACT JS</li>
+              <li>NODE JS IN PROGRESS</li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
   </section>
 </body>
 
