--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Abbas Atwi</title>
 </head>
 
 <body>
   <section class="principal">
     <div class="download">
       <div class="section-text">
-
         <div class="img-profile">
           <img src="abbas.jpg" alt="">
         </div>
         <h1>Abbas Atwi</h1>
-        <p>Software Engenner</p>
+        <p class="animate-p">Software Engeneer</p>
 
         <div class="btns">
           <a href="">Contato</a>
@@ -29,7 +28,7 @@
       <div class="sub-principal">
         <div class="section-text flex-2">
           <h1>Sobre mim</h1>
-
+          <p class="sobre-mim">Sempre tive curiosidade na area de tecnologia, pois ela e bastante abrangente , onde tudo que voce pensar e imaginar , podera por em pratica e desenvolver-lo. Isso é incrivel !</p>
         </div>
 
         <div class="sub-principal-content">
@@ -52,6 +51,11 @@
         </div>
       </div>
   </section>
+
+  <footer>
+    <p>Todos os direitos reservados 2023.</p>
+    <h3>Assembled by Abbas atwi</h3>
+  </footer>
 </body>
 
 </html>
