--- a/index.html
+++ b/index.html
@@ -17,45 +17,55 @@
           <img src="abbas.jpg" alt="">
         </div>
         <h1>Abbas Atwi</h1>
-        <p class="animate-p">Software Engeneer</p>
-
-        <div class="btns">
-          <a href="">Contato</a>
-          <a href="">Projetos</a </div>
-        </div>
-      </div>
-
-      <div class="sub-principal">
-        <div class="section-text flex-2">
-          <h1>Sobre mim</h1>
-          <p class="sobre-mim">Sempre tive curiosidade na area de tecnologia, pois ela e bastante abrangente , onde tudo que voce pensar e imaginar , podera por em pratica e desenvolver-lo. Isso é incrivel !</p>
-        </div>
-
-        <div class="sub-principal-content">
-          <div class="sub-principal-img">
-            <img src="mac.png" alt="">
-          </div>
-
-          <div class="sub-principal-desc">
-            <h1>Soft Skills</h1>
-
+        <div class="body-modal ">
+          <div class="modal-contact">
             <ul>
-              <li>Graduação - Eng. Software</li>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JAVASCRIPT</li>
-              <li>REACT JS</li>
-              <li>NODE JS IN PROGRESS</li>
+              <li><a href="https://github.com/abbas-atwi">git-hub</a></li>
+              <li><a href="https://github.com/abbas-atwi">Facebook</a></li>
             </ul>
           </div>
         </div>
-      </div>
+        <p class="animate-p">Software Engeneer</p>
+
+        <div class="btns">
+          <a href="" class="btns-contact">Contato</a>
+          <a href="">Projetos</a>
+        </div>
+
+
+        <div class="sub-principal">
+          <div class="section-text flex-2">
+            <h1>Sobre mim</h1>
+            <p class="sobre-mim">Sempre tive curiosidade na area de tecnologia, pois ela e bastante abrangente , onde tudo que voce pensar e imaginar , podera por em pratica e desenvolver-lo. Isso é incrivel !</p>
+          </div>
+
+          <div class="sub-principal-content">
+            <div class="sub-principal-img">
+              <img src="mac.png" alt="">
+            </div>
+
+            <div class="sub-principal-desc">
+              <h1>Soft Skills</h1>
+
+              <ul>
+                <li>Graduação - Eng. Software</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JAVASCRIPT</li>
+                <li>REACT JS</li>
+                <li>NODE JS IN PROGRESS</li>
+              </ul>
+            </div>
+          </div>
+        </div>
   </section>
 
   <footer>
     <p>Todos os direitos reservados 2023.</p>
     <h3>Assembled by Abbas atwi</h3>
   </footer>
+
+  <script src="app.js"></script>
 </body>
 
 </html>
